--- a/src/client/app.template.html
+++ b/src/client/app.template.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RefApp</title>
+  <title>CongressApp</title>
   <base href="/">
-
+  <link rel="icon" type="image/png" href="./favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-main></app-main>
 </body>
 </html>
